Wriiten the code establlishing connection and sending first connection mesage as well as written the code for FileTransferService

--- a/data/src/main/res/values/strings.xml
+++ b/data/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">data</string>
+
+    <string name="pref_WiFiClientIp">WiFiClientIp</string>
+    <string name="pref_GroupOwnerAddress">GroupOwnerAddress</string>
+    <string name="pref_ServerBoolean">ServerBoolean</string>
 </resources>
